# plover

./: .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  NEWS.md  NEWS.rst  README.md  README.rst  README.txt  README_es.rst  appveyor.yml  bootstrap.bat  bootstrap.sh  circle.yml  index.html  launch.bat  launch.py  launch.sh  params.json  pyinstaller.spec  pyproject.toml  pytest.ini  pyuic.json  pyuic.json.in  requirements.txt  requirements_base_devel.txt  requirements_constraints.txt  requirements_distribution.txt  requirements_plugins.txt  run_tests.py  setup.cfg  setup.py  test.bat  test.sh  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  RELEASE_DRAFT_FILTER.lua  RELEASE_DRAFT_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  support-request.md
.github/workflows/: ci.yml
application/: Plover.desktop  plover  plover.desktop
archlinux/: .gitignore  PKGBUILD
ci/: circle.sh  travis.sh
css/: styles.css
debian/: changelog  control  copyright  py3dist-overrides  rules
dev/: build_hidapi.sh  hidapi_setup.sh  write_hidapi_pth.py
doc/: SCOWL_README.txt  about.rst  add_translation.md  advanced_usage.md  advanced_usage.rst  api_reference.md  api_reference.rst  basic_usage.md  ci.md  cli_reference.md  cli_reference.rst  community.rst  conf.py  configuration.md  contributing.md  design.md  dev_guide.rst  developer_guide.md  developer_guide.rst  dict_editor.md  dict_formats.md  dictionaries.md  from_source.rst  hardware_communication.md  hardware_setup.md  i18n.md  index.md  index.rst  installation.md  installation.rst  internals.md  learning_steno.rst  platform_layer.md  plover_guide.md  plover_guide.tex  plugin_dev.md  plugin_dev.rst  plugins.md  plugins.rst  pro_steno.rst  (+8 more)
doc/_static/: custom.css
doc/_templates/: layout.html
doc/api/: config.md  config.rst  dictionary.md  dictionary_lib.md  engine.md  engine.rst  exception.md  exception.rst  formatting.md  formatting.rst  i18n.md  key_combo.md  key_combo.rst  log.md  log.rst  machine.md  machine.rst  machine_keyboard_capture.md  machine_keymap.md  machine_keymap.rst  misc.md  misc.rst  orthography.md  orthography.rst  oslayer.md  oslayer_config.md  oslayer_config.rst  oslayer_controller.md  oslayer_controller.rst  oslayer_i18n.md  oslayer_keyboardcontrol.md  oslayer_keyboardcontrol.rst  oslayer_log.md  oslayer_processlock.rst  oslayer_wmctrl.md  oslayer_wmctrl.rst  output.md  plover.md  plover_stroke.md  qt.md  (+15 more)
doc/plugin-dev/: commands.md  commands.rst  dictionaries.md  dictionaries.rst  extensions.md  extensions.rst  gui_tools.md  gui_tools.rst  machines.md  machines.rst  macros.md  macros.rst  metas.md  metas.rst  publishing.md  publishing.rst  setup.md  setup.rst  systems.md  systems.rst
doc/system-dev/: board-layout.md  key-arrangement.md  layout-test.md  steno-system.md  system.md
javascript/: main.js
linux/: README.md  appimage.sh  appimage_blacklist.txt  build_hidapi.sh  debuild.sh  makepkg.sh  org.openstenoproject.Plover.metainfo.xml  packpack.mk  packpack.sh
linux/appimage/: Dockerfile  apprun.sh  blacklist.txt  build.sh  deps.sh  pyinfo.py
news.d/: template.md
news.d/api/: 1066.break.md  1066.break.rst  1258.break.md  1258.new.md  1284.break.md  1302.new.md  1332.break.md  1362.break.md  1375.break.md  1601.break.md  1633.new.md  1634.break.md  1639.new.md  1658.new.md
news.d/bugfix/: 1022.core.md  1027.windows.md  1038.dict.rst  1041.ui.rst  1061.ui.md  1062.ui.rst  1065.core.rst  1066.core.md  1096.dict.md  1114.mac.rst  1116.core.rst  1123.core.md  1130.core.rst  1135.ui.rst  1139.core.rst  1152.osx.md  1152.osx.rst  1153.linux.rst  1159.core.md  1163.linux.rst  1171.ui.rst  1188.core.md  1219.ui.md  1230.ui.md  1248.ui.md  1271.osx.md  1274.windows.md  1302.core.md  1313.core.md  1314.ui.md  (+49 more)
osx/: DevReadme.txt  README.md  app2dmg.sh  bootstrap.sh  build_hidapi.sh  deps.sh  make_app.sh  make_common.sh  make_dmg.sh  makefile  notarize_app.sh  notarize_common.sh  notarize_dmg.sh  plover.icns  requirements.txt  setup.py
plover/: __init__.py  __main__.py  app.py  config.py  config_test.py  dictionary_editor_store.py  dist_main.py  engine.py  exception.py  formatting.py  gui.py  i18n.py  key_combo.py  keyboardcontrol.py  log.py  logger.py  main.py  misc.py  orthography.py  plugins.py  registry.py  resource.py  steno.py  steno_dictionary.py  suggestions.py  test_config.py  test_formatting.py  test_log.py  test_logger.py  test_orthography.py  test_steno.py  test_steno_dictionary.py  test_translation.py  translation.py
plover_build_utils/: check_requirements.py  deps.sh  dmgbuild.sh  download.py  functions.sh  get_pip.py  install_wheels.py  pyqt.py  setup.py  source_less.py  testing.py  tree.py  trim.py  zipdir.py
reqs/: bootstrap.txt  build.txt  ci.txt  constraints.txt  dev.txt  dist.txt  dist_extra_gui_qt.txt  dist_extra_log.txt  dist_plugins.txt  dist_pyqt5.txt  dist_pyqt6.txt  dist_pyside2.txt  packaging.txt  release.txt  setup.txt  test.txt
rpm/: package.spec
test/: __init__.py  conftest.py  eclipse-test.dix  jet-test.dct  py37compat.py  test_blackbox.py  test_command.py  test_config.py  test_default_dict.py  test_dictionary.py  test_eclipse_dict.py  test_engine.py  test_formatting.py  test_jet_dict.py  test_json_dict.py  test_key_combo.py  test_keyboard.py  test_keymap.py  test_loading_manager.py  test_log.py  test_machine.py  test_misc.py  test_orthography.py  test_passport.py  test_priority_dict.py  test_registry.py  test_resource.py  test_rtfcre_dict.py  test_steno.py  test_steno_dictionary.py  test_stentura.py  test_suggestions.py  test_toggle_dict.py  test_translation.py  utils.py
utils/: download.py  functions.sh  get_pip.py  install_wheels.py  metadata.py  pyqt.py  source_less.py  trim.py
windows/: DevReadme.txt  README.md  bootstrap.ps1  build.bat  build_hidapi.sh  dist_blacklist.txt  dist_build.sh  dist_deps.sh  helper.py  hook-plover.py  installer.nsi  main.py  pyinstaller.spec  setup.bat  windows_dev.md  wine-helper.sh
(+342 files in other folders)
