[metadata]
author = Joshua Harlan Lifton
author_email = joshua.harlan.lifton@gmail.com
maintainer = Ted Morin
maintainer_email = morinted@gmail.com
classifiers =
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
        Development Status :: 5 - Production/Stable
        Environment :: X11 Applications
        Environment :: MacOS X
        Environment :: Win32 (MS Windows)
        Intended Audience :: End Users/Desktop
        Natural Language :: English
        Operating System :: POSIX :: Linux
        Operating System :: MacOS :: MacOS X
        Operating System :: Microsoft :: Windows
        Topic :: Adaptive Technologies
        Topic :: Desktop Environment
keywords = plover

[options]
include_package_data = True
zip_safe = True
setup_requires =
	Babel
	PyQt5>=5.8.2
tests_require =
	mock
	pytest
install_requires =
	appdirs>=1.3.0
	appnope>=0.1.0; "darwin" in sys_platform
	plyer==1.2.4; "win32" in sys_platform
	pyobjc-core>=4.0; "darwin" in sys_platform
	pyobjc-framework-Cocoa>=4.0; "darwin" in sys_platform
	pyobjc-framework-Quartz>=4.0; "darwin" in sys_platform
	pyserial>=2.7
	python-xlib>=0.16; "linux" in sys_platform
	setuptools
	wcwidth
packages =
	plover
	plover.dictionary
	plover.gui_none
	plover.gui_qt
	plover.machine
	plover.macro
	plover.oslayer
	plover.system
	plover_build_utils

[options.extras_require]
gui_qt =
	PyQt5>=5.5

[options.entry_points]
console_scripts =
	plover = plover.main:main
plover.dictionary =
	json = plover.dictionary.json_dict:JsonDictionary
	rtf  = plover.dictionary.rtfcre_dict:RtfDictionary
plover.gui =
	none = plover.gui_none.main
	qt   = plover.gui_qt.main [gui_qt]
plover.gui.qt.machine_option =
	plover.machine.base:SerialStenotypeBase = plover.gui_qt.machine_options:SerialOption
	plover.machine.keyboard:Keyboard        = plover.gui_qt.machine_options:KeyboardOption
plover.gui.qt.tool =
	add_translation = plover.gui_qt.add_translation_dialog:AddTranslationDialog
	lookup          = plover.gui_qt.lookup_dialog:LookupDialog
	paper_tape      = plover.gui_qt.paper_tape:PaperTape
	suggestions     = plover.gui_qt.suggestions_dialog:SuggestionsDialog
plover.machine =
	Gemini PR = plover.machine.geminipr:GeminiPr
	Keyboard  = plover.machine.keyboard:Keyboard
	Passport  = plover.machine.passport:Passport
	ProCAT    = plover.machine.procat:ProCAT
	Stentura  = plover.machine.stentura:Stentura
	TX Bolt   = plover.machine.txbolt:TxBolt
plover.macro =
	repeat_last_stroke            = plover.macro.repeat:last_stroke
	retrospective_delete_space    = plover.macro.retrospective:delete_space
	retrospective_insert_space    = plover.macro.retrospective:insert_space
	retrospective_toggle_asterisk = plover.macro.retrospective:toggle_asterisk
	undo                          = plover.macro.undo:undo
plover.system =
	English Stenotype = plover.system.english_stenotype
setuptools.installation =
	eggsecutable = plover.main:main

# vim: commentstring=#\ %s list
