[metadata]
author = Joshua Harlan Lifton
author_email = joshua.harlan.lifton@gmail.com
maintainer = Ted Morin
maintainer_email = morinted@gmail.com
classifiers =
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
        Development Status :: 5 - Production/Stable
        Environment :: X11 Applications
        Environment :: MacOS X
        Environment :: Win32 (MS Windows)
        Intended Audience :: End Users/Desktop
        Natural Language :: English
        Operating System :: POSIX :: BSD
        Operating System :: POSIX :: Linux
        Operating System :: MacOS :: MacOS X
        Operating System :: Microsoft :: Windows
        Topic :: Adaptive Technologies
        Topic :: Desktop Environment
keywords = plover
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Changelog = https://github.com/openstenoproject/plover/blob/master/NEWS.md
    Source Code = https://github.com/openstenoproject/plover
    Issue Tracker = https://github.com/openstenoproject/plover/issues

[options]
include_package_data = True
python_requires = >=3.6
zip_safe = True
packages =
	plover
	plover.command
	plover.dictionary
	plover.gui_none
	plover.gui_qt
	plover.machine
	plover.macro
	plover.meta
	plover.oslayer
	plover.scripts
	plover.system
	plover_build_utils
	plover_build_utils.testing

[options.entry_points]
console_scripts =
	plover              = plover.scripts.main:main
	plover_send_command = plover.scripts.send_command:main
plover.command =
	set_config = plover.command.set_config:set_config
plover.dictionary =
	json = plover.dictionary.json_dict:JsonDictionary
	rtf  = plover.dictionary.rtfcre_dict:RtfDictionary
plover.gui =
	none = plover.gui_none.main
	qt   = plover.gui_qt.main [gui_qt]
plover.gui.qt.machine_option =
	plover.machine.base:SerialStenotypeBase = plover.gui_qt.machine_options:SerialOption
	plover.machine.keyboard:Keyboard        = plover.gui_qt.machine_options:KeyboardOption
plover.gui.qt.tool =
	add_translation = plover.gui_qt.add_translation_dialog:AddTranslationDialog
	lookup          = plover.gui_qt.lookup_dialog:LookupDialog
	paper_tape      = plover.gui_qt.paper_tape:PaperTape
	suggestions     = plover.gui_qt.suggestions_dialog:SuggestionsDialog
plover.machine =
	Gemini PR = plover.machine.geminipr:GeminiPr
	Keyboard  = plover.machine.keyboard:Keyboard
	Passport  = plover.machine.passport:Passport
	ProCAT    = plover.machine.procat:ProCAT
	Stentura  = plover.machine.stentura:Stentura
	TX Bolt   = plover.machine.txbolt:TxBolt
plover.macro =
	repeat_last_stroke            = plover.macro.repeat:last_stroke
	retrospective_delete_space    = plover.macro.retrospective:delete_space
	retrospective_insert_space    = plover.macro.retrospective:insert_space
	retrospective_toggle_asterisk = plover.macro.retrospective:toggle_asterisk
	undo                          = plover.macro.undo:undo
plover.meta =
	attach           = plover.meta.attach:meta_attach
	case             = plover.meta.case:meta_case
	carry_capitalize = plover.meta.attach:meta_carry_capitalize
	comma            = plover.meta.punctuation:meta_comma
	command          = plover.meta.command:meta_command
	glue             = plover.meta.glue:meta_glue
	if_next_matches  = plover.meta.conditional:meta_if_next_matches
	key_combo        = plover.meta.key_combo:meta_key_combo
	mode             = plover.meta.mode:meta_mode
	retro_case       = plover.meta.case:meta_retro_case
	retro_currency   = plover.meta.currency:meta_retro_currency
	stop             = plover.meta.punctuation:meta_stop
	word_end         = plover.meta.word_end:meta_word_end
plover.system =
	English Stenotype = plover.system.english_stenotype

[options.package_data]
plover =
	messages/*/LC_MESSAGES/*.mo

# vim: commentstring=#\ %s list
