[metadata]
author = Joshua Harlan Lifton
author_email = joshua.harlan.lifton@gmail.com
maintainer = Martin Koerner
maintainer_email = info@mkrnr.com
classifiers =
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3.13
        Development Status :: 5 - Production/Stable
        Environment :: X11 Applications
        Environment :: MacOS X
        Environment :: Win32 (MS Windows)
        Intended Audience :: End Users/Desktop
        Natural Language :: English
        Operating System :: POSIX :: BSD
        Operating System :: POSIX :: Linux
        Operating System :: MacOS :: MacOS X
        Operating System :: Microsoft :: Windows
        Topic :: Adaptive Technologies
        Topic :: Desktop Environment
keywords = plover
license = GPL-2.0-or-later
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Changelog = https://github.com/openstenoproject/plover/blob/master/NEWS.md
    Source Code = https://github.com/openstenoproject/plover
    Issue Tracker = https://github.com/openstenoproject/plover/issues

[options]
include_package_data = True
python_requires = >=3.10
zip_safe = True
packages =
	plover
	plover.assets
	plover.command
	plover.dictionary
	plover.gui_none
	plover.gui_qt
	plover.gui_qt.resources
	plover.machine
	plover.machine.keyboard_capture
	plover.macro
	plover.messages
	plover.messages.es.LC_MESSAGES
	plover.messages.fr.LC_MESSAGES
	plover.messages.it.LC_MESSAGES
	plover.messages.nl.LC_MESSAGES
	plover.messages.zh_tw.LC_MESSAGES
	plover.meta
	plover.oslayer
	plover.oslayer.linux
	plover.oslayer.osx
	plover.oslayer.windows
	plover.output
	plover.plugins_manager
	plover.scripts
	plover.system
	plover_build_utils
	plover_build_utils.testing

[options.entry_points]
console_scripts =
	plover              = plover.scripts.main:main
	plover_plugins      = plover.plugins_manager.__main__:main
	plover_send_command = plover.scripts.send_command:main
plover.command =
	set_config = plover.command.set_config:set_config
plover.dictionary =
	json = plover.dictionary.json_dict:JsonDictionary
	rtf  = plover.dictionary.rtfcre_dict:RtfDictionary
plover.gui =
	none = plover.gui_none.main
	qt   = plover.gui_qt.main
plover.gui.qt.machine_option =
	plover.machine.base:SerialStenotypeBase = plover.gui_qt.machine_options:SerialOption
	plover.machine.keyboard:Keyboard        = plover.gui_qt.machine_options:KeyboardOption
	plover.machine.plover_hid:PloverHid       = plover.gui_qt.machine_options:PloverHidOption
plover.gui.qt.tool =
	add_translation = plover.gui_qt.add_translation_dialog:AddTranslationDialog
	lookup          = plover.gui_qt.lookup_dialog:LookupDialog
	paper_tape      = plover.gui_qt.paper_tape:PaperTape
	plugins_manager = plover.gui_qt.plugins_manager:PluginsManager
	suggestions     = plover.gui_qt.suggestions_dialog:SuggestionsDialog
plover.machine =
	Gemini PR  = plover.machine.gemini_pr:GeminiPr
	Keyboard   = plover.machine.keyboard:Keyboard
	Passport   = plover.machine.passport:Passport
    Plover HID = plover.machine.plover_hid:PloverHid
	ProCAT     = plover.machine.procat:ProCat
	Stentura   = plover.machine.stentura:Stentura
	TX Bolt    = plover.machine.tx_bolt:TxBolt
plover.macro =
	repeat_last_stroke            = plover.macro.repeat:last_stroke
	retro_delete_space            = plover.macro.retro:delete_space
	retro_insert_space            = plover.macro.retro:insert_space
	retro_toggle_asterisk         = plover.macro.retro:toggle_asterisk
	retrospective_delete_space    = plover.macro.retro:delete_space
	retrospective_insert_space    = plover.macro.retro:insert_space
	retrospective_toggle_asterisk = plover.macro.retro:toggle_asterisk
	undo                          = plover.macro.undo:undo
plover.meta =
	attach           = plover.meta.attach:meta_attach
	case             = plover.meta.case:meta_case
	carry_capitalize = plover.meta.attach:meta_carry_capitalize
	comma            = plover.meta.punctuation:meta_comma
	command          = plover.meta.command:meta_command
	glue             = plover.meta.glue:meta_glue
	if_next_matches  = plover.meta.conditional:meta_if_next_matches
	key_combo        = plover.meta.key_combo:meta_key_combo
	mode             = plover.meta.mode:meta_mode
	retro_case       = plover.meta.case:meta_retro_case
	retro_currency   = plover.meta.currency:meta_retro_currency
	stop             = plover.meta.punctuation:meta_stop
	word_end         = plover.meta.word_end:meta_word_end
plover.system =
	English Stenotype = plover.system.english_stenotype

[options.package_data]
plover =
	messages/*/LC_MESSAGES/*.mo

[options.exclude_package_data]
plover =
	assets/*.ico
	assets/*.svg
	messages/*/LC_MESSAGES/*.po
	messages/plover.pot
plover.gui_qt =
	*.ui

# vim: commentstring=#\ %s list
